NEW253695
Drawing with GraphicsContext::platformContext() is error prone and does not support custom contexts
https://bugs.webkit.org/show_bug.cgi?id=253695
Summary Drawing with GraphicsContext::platformContext() is error prone and does not s...
Kimmo Kinnunen
Reported 2023-03-10 01:08:44 PST
Drawing with GraphicsContext::platformContext() is problematic - A frequent bug: callers do not save and restore the context state - Drawing is not reflected in the secondary context in BifurcatedGraphicsContext
Attachments
Radar WebKit Bug Importer
Comment 1 2023-03-10 01:09:24 PST
Radar WebKit Bug Importer
Comment 2 2023-03-10 01:10:20 PST
Kimmo Kinnunen
Comment 3 2023-03-10 02:22:18 PST
Note You need to log in before you can comment on or make changes to this bug.