Drawing with GraphicsContext::platformContext() is error prone and does not support custom contexts https://bugs.webkit.org/show_bug.cgi?id=253695 rdar://106543542

Reviewed by NOBODY (OOPS!).

Problems with using GraphicsContext::platformContext()
1. A frequent bug: callers do not save and restore the context state
2. Drawing is not reflected in the secondary context in BifurcatedGraphicsContext
3. platformContext() does not make sense for all contexts so correct invocation is
   if (context.hasPlatformContext()) ...
   NullGraphicsContext, DisplayList::Recorder, at least are such contexts.
(4. Code needs to refer to platform-specific-ifdeffed alias type PlatformGraphicsContext)

GraphicsContext has draw primitives such for stroked lines, rects, images,
etc. Add a new type of "primitive": "draw with custom code that uses CGContext".

Fixes 1. by:
GraphicsContext will invoke the draw function and try to ensure that the draw function cannot
mutate the underlying CGContext in a way that would break GraphicsContext
assumptions.

Fixes 2. by:
The draw function can be invoked multiple times for one client "draw".

Fixes 3. by:
Instead clients obtaining the platformContext(), they obtain "does this
context support interface "GraphicsContextDrawWithCGContext".

The interface definition would burden the already big GraphicsContext base
class and header file. Instead, introduce "companion interface"
GraphicsContextDrawWithCGContext. The new interface contains the API
definitions, where as GraphicsContext has only ifdefs for the query
entry point "asDrawWithCGContext()". This pattern is also used in
GraphicsContextGL -> GraphicsContextGLCV. The new interface cannot be
put to GraphicsContextCG only, as BifurcatedGraphicsContext has the need
for same interface but different implementation. This means upcast to
GraphicsContextCG is not a solution.

Convert few platformContext() uses to the new API. ApplePayLogoSystemImage
had the bug described in point 1. This class of bugs could  be guaranteed
to be fixed by this construct.

* Source/WebCore/Modules/applepay/ApplePayLogoSystemImage.mm:
(WebCore::ApplePayLogoSystemImage::draw const):
* Source/WebCore/PlatformMac.cmake:
* Source/WebCore/SourcesCocoa.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/platform/cocoa/LocalCurrentGraphicsContext.h:
(WebCore::LocalCurrentGraphicsContext::cgContext): Deleted.
* Source/WebCore/platform/cocoa/LocalCurrentGraphicsContext.mm: Added.
(WebCore::LocalCurrentGraphicsContext::LocalCurrentGraphicsContext):
(WebCore::LocalCurrentGraphicsContext::~LocalCurrentGraphicsContext):
(WebCore::LocalCurrentGraphicsContext::applyState):
(WebCore::LocalCurrentGraphicsContext::restoreState):
Adds a new constructor to LocalCurrentGraphicsContext, construct with CGContext
Refactors the implementation to be simpler to avoid adding the same constructor
to two files, iOS and Mac.

* Source/WebCore/platform/cocoa/MIMETypeRegistryCocoa.mm:
(WebCore::extensionsForMIMETypeMap):
* Source/WebCore/platform/graphics/BifurcatedGraphicsContext.h:
* Source/WebCore/platform/graphics/GraphicsContext.h:
(WebCore::GraphicsContext::asDrawWithCGContext):
* Source/WebCore/platform/graphics/avfoundation/objc/AVAssetMIMETypeCache.mm:
* Source/WebCore/platform/graphics/avfoundation/objc/ImageDecoderAVFObjC.mm:
* Source/WebCore/platform/graphics/cg/BifurcatedGraphicsContextCG.cpp: Added.
(WebCore::BifurcatedGraphicsContextCG::asDrawWithCGContext):
(WebCore::BifurcatedGraphicsContextCG::drawWithCGContext):
* Source/WebCore/platform/graphics/cg/BifurcatedGraphicsContextCG.h: Added.
* Source/WebCore/platform/graphics/cg/GraphicsContextCG.cpp:
(WebCore::GraphicsContextCG::drawNativeImageInternal):
(WebCore::GraphicsContextCG::drawPattern):
(WebCore::GraphicsContextCG::fillRect):
(WebCore::GraphicsContextCG::fillRectWithRoundedHole):
(WebCore::GraphicsContextCG::beginTransparencyLayer):
(WebCore::GraphicsContextCG::drawLinesForText):
(WebCore::GraphicsContextCG::drawWithCGContext):
* Source/WebCore/platform/graphics/cg/GraphicsContextCG.h:
* Source/WebCore/platform/graphics/cg/GraphicsContextDrawWithCGContext.h: Added.
* Source/WebCore/platform/graphics/cocoa/UnrealizedCoreTextFont.cpp:
* Source/WebCore/platform/graphics/cocoa/UnrealizedCoreTextFont.h:
* Source/WebCore/platform/graphics/mac/ScrollbarTrackCornerSystemImageMac.mm:
(WebCore::ScrollbarTrackCornerSystemImageMac::drawControl const):
* Source/WebCore/platform/ios/LocalCurrentGraphicsContextIOS.mm: Removed.
* Source/WebCore/platform/mac/LocalCurrentGraphicsContextMac.mm: Removed.
* Source/WebCore/platform/mediastream/mac/MockRealtimeVideoSourceMac.mm:
* Source/WebKit/Shared/RemoteLayerTree/RemoteLayerBackingStore.mm:
(WebKit::RemoteLayerBackingStore::paintContents):