Source/WebCore/platform/graphics/cocoa/UnrealizedCoreTextFont.h
@@ -25,6 +25,8 @@
 
 #pragma once
 
+#include "FontCacheCoreText.h"
+#include "FontTaggedSettings.h"
 #include <CoreFoundation/CoreFoundation.h>
 #include <CoreText/CoreText.h>
 #include <variant>
