Source/WebCore/platform/mediastream/mac/MockRealtimeVideoSourceMac.mm
@@ -45,6 +45,7 @@
 #import <QuartzCore/CALayer.h>
 #import <QuartzCore/CATransaction.h>
 #import <objc/runtime.h>
+#import <wtf/MediaTime.h>
 
 #import "CoreVideoSoftLink.h"
 #import <pal/cf/CoreMediaSoftLink.h>
